--- a/Prediction_using_Unsupervised_ML.ipynb
+++ b/Prediction_using_Unsupervised_ML.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Prediction using Unsupervised ML.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "mount_file_id": "19FFa0dBV8PJaNH4sVKL7Ho0W3NSEFFrH",
+      "authorship_tag": "ABX9TyM7AADRNF/35FVEzyIwXpFx"
     },
     "kernelspec": {
       "name": "python3",
@@ -24,7 +26,11 @@
       "source": [
         "Prediction using Unsupervised ML\n",
         "\n",
-        "Dataset : https://bit.ly/3kXTdox"
+        "Dataset : https://bit.ly/3kXTdox\n",
+        "\n",
+        "Description- From the given ‘Iris’ dataset, predict the optimum number of clusters and represent it visually.\n",
+        "\n",
+        "Author- Divyani Maharana"
       ]
     },
     {
